[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scene/Click/SpengHead.gd" type="Script" id=1]
[ext_resource path="res://Image/Head_Speng.png" type="Texture" id=2]
[ext_resource path="res://Font/SanamDeklen_chaya.ttf" type="DynamicFontData" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 9.4941

[sub_resource type="DynamicFont" id=2]
size = 44
outline_size = 1
font_data = ExtResource( 3 )

[node name="Tek_abc3dz_speng" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D_speng" type="CollisionShape2D" parent="."]
position = Vector2( -0.568054, -2.6663 )
scale = Vector2( 4.81676, 4.62701 )
shape = SubResource( 1 )

[node name="SpengSprite" type="Sprite" parent="."]
position = Vector2( -0.880249, -1.7605 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="Label" type="Label" parent="."]
margin_left = -15.0
margin_top = -104.0
margin_right = 25.0
margin_bottom = -29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[connection signal="input_event" from="." to="." method="_on_Tek_abc3dz_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
